# AIList

./: .gitignore  LICENSE  README.md
ailist/: README.md  ailist.py  base.py  demo.py  mcp.py  piper_tts.py  pyproject.toml
ailist/ailist/: __init__.py  ailist.py  base.py  file_converter.py  mcp.py
ailist/tests/: install.cmd  test_attachments.py  test_integration_part2.py  test_integration_qwen.py  test_mcp.py
ailist/tests/skills/test/: SKILL.md
ailist/tests/test_files/: itest_page.html  sample.csv  sample.docx  sample.py  sample.xlsx  sample.xml
ralph/: README.md  install.cmd  pyproject.toml  test.cmd  test30.cmd  test_alt.cmd
ralph/ralph/: __init__.py  ralph.py  ralph_demo.py
tests/: test_integration_part1.py
tests/test_files/: itest_data.json  sample.md  sample.pptx  sample.txt
