[project]
name = "ralph"
version = "0.1.0"
description = "Autonomous iterative coding agent built on AIList (the Ralph cycle)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "ailist",             # core LLM engine — install from ../ailist or PyPI
    "langchain-core",     # StructuredTool (transitively provided by ailist, listed for clarity)
]

[project.scripts]
ralph = "ralph.ralph_demo:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ralph"]

[tool.hatch.metadata]
allow-direct-references = true